--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.1.8",
+    "@adonisjs/lucid": "^15.0.1",
     "@adonisjs/repl": "^3.1.4",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
