--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PORT=3333
-HOST=0.0.0.0
 NODE_ENV=development
-APP_KEY=akqzONwA4f64umvYpGXMV-lbNMkN5IvX
+DB_CONNECTION=mysql
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
