--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "youch-terminal": "^1.1.1"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.0.7",
     "@adonisjs/core": "^5.1.8",
     "@adonisjs/lucid": "^15.0.1",
     "@adonisjs/repl": "^3.1.4",
+    "luxon": "^2.0.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19"
